fixes in alignment in global controls

--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -15,14 +15,14 @@
     text-align: center;
     font-size: 22px;
     font-weight: bold;
-    padding: 4px;
+    height: 40px;
 }
 
 .custom-filter-armed {
     text-align: center;
     font-size: 22px;
     font-weight: bold;
-    padding: 6px;
+    height: 60px;
 }
 
 .custom-sidebar {
